refactor for checking

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" />
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <title>Clock</title>
   </head>
@@ -11,7 +12,7 @@
     <div class="clockCase">
       <div>
         <h1 id="clock">00:00:00</h1>
-        <div class="buttonsCase">
+        <div class="buttonCase">
           <button id="start">Запустить часы</button>
           <button id="stop">Остановить часы</button>
         </div>
