--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" />
     <link rel="stylesheet" href="./assets/css/styles.css" />
     <title>Clock</title>
   </head>
 
   <body>
-    <div class="clockCase">
+    <main class="clockCase">
       <div>
         <h1 id="clock">00:00:00</h1>
-        <div class="buttonCase">
-          <button id="start">Запустить часы</button>
-          <button id="stop">Остановить часы</button>
+
+        <div class="buttonsCase">
+          <button id="start">Start the clock</button>
+          <button id="stop">Stop the clock</button>
         </div>
       </div>
-    </div>
+    </main>
 
     <script src="./assets/js/main.js" defer></script>
   </body>
